Fixed delete required step -link appearing in the wrong position when multiple steps added.

--- a/css/admin-obf.css
+++ b/css/admin-obf.css
@@ -84,3 +84,6 @@ ul#obf-badges li .badge-desc {
 #badgeos_obf_image_meta_box .wp-post-image {
     max-width: 150px; max-height: 150px;
 }
+
+#badgeos_steps_ui #steps_list .step-row .spinner { margin-bottom: -20px; }
+#badgeos_steps_ui #steps_list .step-row { clear: right; }
